--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-ui
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
+
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=/swagger-ui-html
